<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:padding="16dp"
    tools:context="com.example.a21657540.appexadt2_cristobalrevelles.MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvNombre1"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText"
            android:layout_alignBottom="@+id/editText"
            android:text="@string/tvNombre" />

        <EditText
            android:id="@+id/etNombre1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvNombre2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText"
            android:layout_alignBottom="@+id/editText"
            android:text="@string/tvTipo" />


        <EditText
            android:id="@+id/etTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/tvNombre3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText"
            android:layout_alignBottom="@+id/editText"
            android:text="@string/tvOrigen" />


        <EditText
            android:id="@+id/etOrigen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/tvNombre4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText"
            android:layout_alignBottom="@+id/editText"
            android:text="@string/tvFuncion" />


        <EditText
            android:id="@+id/etFuncion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvNombre5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText"
            android:layout_alignBottom="@+id/editText"
            android:text="@string/tvNutrientes" />


        <EditText
            android:id="@+id/etNutrientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />


    </LinearLayout>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="12dp"
        android:onClick="RegistrarAlimento"
        android:text="@string/btnRegistrar" />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegistrar"
        android:layout_centerHorizontal="true"
        android:onClick="consultarAlimento"
        android:text="@string/btnConsultar" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnConsultar"
        android:layout_alignRight="@+id/btnConsultar"
        android:layout_below="@+id/btnConsultar"
        android:onClick="limpiarCampos"
        android:text="@string/btnLimpiar" />

</RelativeLayout>
