<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:padding="16dp"
    tools:context="com.example.a21657540.appexadt2_cristobalrevelles.DatosActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvNombre1"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText"
            android:layout_alignBottom="@+id/editText"
            android:text="@string/tvNombre"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/etNombreAlimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNombre2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText"
            android:layout_alignBottom="@+id/editText"
            android:text="@string/tvTipo"
            android:textSize="24sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/etTipoAlimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvNombre3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText"
            android:layout_alignBottom="@+id/editText"
            android:text="@string/tvOrigen"
            android:textSize="24sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/etOrigenAlimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvNombre4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText"
            android:layout_alignBottom="@+id/editText"
            android:text="@string/tvFuncion"
            android:textSize="24sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/etFuncionAlimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNombre5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText"
            android:layout_alignBottom="@+id/editText"
            android:text="@string/tvNutrientes"
            android:textSize="24sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/etNutrientesAlimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="24dp"
        android:onClick="borrarElemento"
        android:text="@string/btnEliminar" />


</RelativeLayout>
